# domino-assistent

./: .gitignore  .travis.yml  CMakeLists.txt  Main.cpp  README.md
src/: CMakeLists.txt  DominoTreeStructureElement.h  PlayGround.cpp  PlayGround.h  Stone.cpp  main.cpp  main.h
src/DominoLib/: CMakeLists.txt  DominoCV.cpp  DominoCV.h  DominoLib.cpp  DominoLib.h  SafeQueue.h
src/Game/: CMakeLists.txt  DominoHalf.cpp  DominoHalf.h  DominoPiece.cpp  DominoPiece.h  DominoTreeStructureElement.cpp  DominoTreeStructureElement.h  Game.h  HalfStone.cpp  HalfStone.h  PlayGround.cpp  PlayGround.h  Stone.h
src/ImageClipping/: CMakeLists.txt  ImageClipping.cpp  ImageClipping.h  ImageClippingFactory.cpp  ImageClippingFactory.h
src/ImageHandler/: CMakeLists.txt  FileImageHandler.cpp  FileImageHandler.h  I_ImageHandler.h  ImageHandlerFactory.cpp  ImageHandlerFactory.h  IpcamHandler.cpp  IpcamHandler.h
src/ImgDebugPrinter/: CMakeLists.txt  DefaultImgDebugPrinter.cpp  ImgDebugPrinter.h  StubImgDebugPrinter.cpp
src/PipsDetector/: CMakeLists.txt  PipsDetector.cpp  PipsDetector.h
src/division/: CMakeLists.txt
srcImgApplyPlayerStones/: apply.psd
test/: CMakeLists.txt
test/src/: DominoCV_tests.cpp  Game_tests.cpp  PipDetector_tests.cpp  PlayerPiecesTest.cpp  divider_tests.cpp
